[Qt] WK2 Debugging quirks need some improvement https://bugs.webkit.org/show_bug.cgi?id=74859

Reviewed by Simon Hausmann.

Improvements added to make debugging WebKit2 more
confortable and efficient:
1. Unify debugging quirks. From now all of them are controlled
by the QT_WEBKIT2_DEBUG environment variable.
2. Disable crash handlers for WebKitTestRunner if debugging quirks
are used to make it possible to use postmortem debugging via core dumps
which is extremely useful for debugging bugs triggered by layout tests.
3. Disable test timeout for WebKitTestRunner if debugging quirks
are used because that makes debugging impossible.

Source/WebKit2:

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
(WebKit::QtWebProcess::setupChildProcess):
* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::WebProcessMainQt):

Tools:

* WebKitTestRunner/InjectedBundle/qt/InjectedBundleQt.cpp:
(WTR::InjectedBundle::platformInitialize):
* WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:
(WTR::LayoutTestController::initializeWaitToDumpWatchdogTimerIfNeeded):
* WebKitTestRunner/qt/TestControllerQt.cpp:
(WTR::TestController::platformRunUntil):

Canonical link: https://commits.webkit.org/91688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103329 268f45cc-cd09-0410-ab3c-d52691b4dbfc